fixing the intro with dark mode and lazyMotion

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html {
+  @apply scroll-smooth;
+}
+
+body {
+  @apply bg-black text-gray-100;
+}
+
+.c-scrollbar_thumb {
+  @apply !bg-white;
+}
+
+[data-scroll-container] {
+  perspective: 999999px !important;
+}
